[package]
name = "fluvio-helm"
version = "0.5.3"
edition = "2018"
license = "Apache-2.0"
authors = ["André Claudino <claudino@d2x.com.br>", "Fluvio Contributors <team@fluvio.io>"]
repository = "https://github.com/infinyon/fluvio-helm"
description = "Helm wrapper"

[lib]
name = "fluvio_helm"
path = "src/lib.rs"

[dependencies]
tracing = "0.1.19"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"
fluvio-command = "0.2.0"
